# narou-radar

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/collectors/: narou_api.py
app/domain/: models.py
app/forecasting/: base.py  naive.py
app/labeling/: rule_based.py
app/llm/: base.py
app/scoring/: radar.py
app/services/: pipeline.py  tokenizer.py
app/static/: style.css
app/storage/: duckdb_repo.py
app/templates/: base.html  index.html  theme_detail.html
config/: topics.yaml
scripts/: fetch_data.py  recompute_metrics.py  seed_topics.py
tests/: test_forecast_storage.py  test_forecasting.py  test_labeling.py  test_scoring.py
